# RutaLincePY

./: .gitignore  Datos_Screen.py  main.py  pyproject.toml  readme.md  reporte_calidad.txt  reporte_calidad2_screens.txt  reporte_calidad3_screens.txt  requirements.txt
assets/csv/: area.csv  campus.csv  carrera.csv  carrera_campus.csv  comentario.csv  crucigrama.csv  csv_ing_civ_comp.xlsx  movimientos.txt  palabra.csv  pregunta.csv  preguntas_actualizadas.csv  respaldopregunta.csv  resultado.csv  simulador.csv  sopa.csv  tema.csv  video.csv
database/: csv_loader.py  database.py  ruta_lince.db
screens/welcome_section/: bienvenida_screen.py  seleccion_campus_screen.py  seleccion_carrera_screen.py
src/: main.py
src/database/: csv_loader.py  database.py  lista_videos.txt
src/screens/: ajustes_screen.py  creditos_screen.py  crucigrama_screen.py  inicio_screen.py  juegos_screen.py  preguntas_screen.py  seleccionar_crucigrama_screen.py  seleccionar_sopa_screen.py  simulador_screen.py  sopa_de_letras_screen.py
src/screens/welcome_section/: bienvenida_screen.py  seleccion_campus_screen.py  seleccion_carrera_screen.py
src/widgets/: comments_widget.py  nav_bar_widget.py  quiz_widget.py  video_interaction_widget.py
widgets/: button_campus_widget.py  button_welcome_widget.py
